update feature #2403, add statistic count method for kmelia theme tracker purpose