@@ -24,6 +24,7 @@
 package com.stratelia.webactiv.util.statistic.control;
 
 import java.sql.Connection;
+import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -43,6 +44,7 @@ import com.stratelia.webactiv.beans.admin.OrganizationController;
 import com.stratelia.webactiv.beans.admin.UserDetail;
 import com.stratelia.webactiv.util.DBUtil;
 import com.stratelia.webactiv.util.JNDINames;
+import com.stratelia.webactiv.util.WAPrimaryKey;
 import com.stratelia.webactiv.util.exception.SilverpeasRuntimeException;
 import com.stratelia.webactiv.util.statistic.ejb.HistoryObjectDAO;
 import com.stratelia.webactiv.util.statistic.model.HistoryByUser;
@@ -245,10 +247,9 @@ public class StatisticBmEJB implements SessionBean {
     try {
       list = getHistoryByAction(foreignPK, action, objectType);
     } catch (Exception e) {
-      throw new StatisticRuntimeException(
-          "StatisticBmEJB.getHistoryByObject()",
-          SilverpeasRuntimeException.ERROR,
-          "statistic.EX_IMPOSSIBLE_DOBTENIR_LETAT_DES_LECTURES", e);
+      throw new StatisticRuntimeException("StatisticBmEJB.getHistoryByObject()",
+          SilverpeasRuntimeException.ERROR, "statistic.EX_IMPOSSIBLE_DOBTENIR_LETAT_DES_LECTURES",
+          e);
     }
     String[] readerIds = new String[list.size()];
     Date[] date = new Date[list.size()];
@@ -273,8 +274,9 @@ public class StatisticBmEJB implements SessionBean {
       compteur = j + 1;
     }
     for (int j = compteur; j < controlledUsers.length; j++) {
-      if (!allUsers.contains(controlledUsers[j]))
+      if (!allUsers.contains(controlledUsers[j])) {
         allUsers.add(controlledUsers[j]);
+      }
     }
 
     // création de la liste de tous les utilisateur ayant le droit de lecture
@@ -305,10 +307,10 @@ public class StatisticBmEJB implements SessionBean {
             nbAccess = nb.intValue();
             nbAccess = nbAccess + 1;
           }
-          nbAccessbyUser.put(controlledUsers[j], new Integer(nbAccess));
+          nbAccessbyUser.put(controlledUsers[j], Integer.valueOf(nbAccess));
         } else {
           byUser.put(controlledUsers[j], date[j]);
-          nbAccessbyUser.put(controlledUsers[j], new Integer(1));
+          nbAccessbyUser.put(controlledUsers[j], Integer.valueOf(1));
         }
       }
     }
@@ -321,12 +323,14 @@ public class StatisticBmEJB implements SessionBean {
       UserDetail user = historyByUser.getUser();
       // recherche de la date de dernier accès
       Date lastAccess = (Date) byUser.get(user);
-      if (lastAccess != null)
+      if (lastAccess != null) {
         historyByUser.setLastAccess(lastAccess);
+      }
       // recherche du nombre d'accès
       Integer nbAccess = (Integer) nbAccessbyUser.get(user);
-      if (nbAccess != null)
+      if (nbAccess != null) {
         historyByUser.setNbAccess(nbAccess.intValue());
+      }
     }
 
     // tri de la liste pour mettre en premier les users ayant consulté
@@ -381,16 +385,76 @@ public class StatisticBmEJB implements SessionBean {
   }
 
   /**
+   * @param primaryKeys
+   * @param action
+   * @param objectType
+   * @param startDate the starting time
+   * @param endDate then ending time
+   * @return number of accessed publications
+   */
+  public int getCountByPeriod(List<WAPrimaryKey> primaryKeys, int action, String objectType,
+      Date startDate, Date endDate) {
+    int nb = 0;
+    Connection con = null;
+    try {
+      con = getConnection();
+      for (WAPrimaryKey primaryKey : primaryKeys) {
+        nb += HistoryObjectDAO.getCountByPeriod(con, primaryKey, objectType, startDate, endDate);
+      }
+    } catch (Exception e) {
+      throw new StatisticRuntimeException("StatisticBmEJB().getCount()",
+          SilverpeasRuntimeException.ERROR,
+          "statistic.CANNOT_GET_HISTORY_STATISTICS_PUBLICATION", e);
+    } finally {
+      freeConnection(con);
+    }
+    return nb;
+  }
+
+  /**
+   * @param primaryKey
+   * @param objectType
+   * @param startDate the starting time
+   * @param endDate then ending time
+   * @param userId
+   * @return
+   * @throws SQLException
+   */
+  public int getCountByPeriodAndUser(List<WAPrimaryKey> primaryKeys, String objectType,
+      Date startDate, Date endDate, List<String> userIds) {
+    int nb = 0;
+    Connection con = null;
+    try {
+      con = getConnection();
+      if (!userIds.isEmpty()) {
+        for (String userId : userIds) {
+          for (WAPrimaryKey primaryKey : primaryKeys) {
+            nb +=
+                HistoryObjectDAO.getCountByPeriodAndUser(con, primaryKey, objectType, startDate,
+                    endDate, userId);
+          }
+        }
+      }
+    } catch (Exception e) {
+      throw new StatisticRuntimeException("StatisticBmEJB().getCount()",
+          SilverpeasRuntimeException.ERROR,
+          "statistic.CANNOT_GET_HISTORY_STATISTICS_PUBLICATION", e);
+    } finally {
+      freeConnection(con);
+    }
+
+    return nb;
+  }
+
+  /**
    * Method declaration
    * @throws CreateException
-   * @see
    */
   public void ejbCreate() throws CreateException {
   }
 
   /**
    * Method declaration
-   * @see
    */
   @Override
   public void ejbRemove() {
@@ -398,7 +462,6 @@ public class StatisticBmEJB implements SessionBean {
 
   /**
    * Method declaration
-   * @see
    */
   @Override
   public void ejbActivate() {
@@ -406,7 +469,6 @@ public class StatisticBmEJB implements SessionBean {
 
   /**
    * Method declaration
-   * @see
    */
   @Override
   public void ejbPassivate() {
@@ -415,7 +477,6 @@ public class StatisticBmEJB implements SessionBean {
   /**
    * Method declaration
    * @param sc
-   * @see
    */
   @Override
   public void setSessionContext(SessionContext sc) {
